[package]
name = "tracing-demo-root"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/tracing-grpc",
    "src/tracing-http",
]

[workspace.dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.9.0"
opentelemetry = "0.28.0"
opentelemetry_sdk = "0.28.0"
opentelemetry-stdout = { version = "0.28.0", features = ["trace"] }
tonic = { version = "0.14", features = ["server", "codegen", "channel", "router"] }
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
